--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudam Shrestha</title>
-    <link href="../src/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="/dist/main.css">
+    <link href="./src/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="./dist/main.css">
 </head>
 
 <body class="relative main">
