--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sudam Shrestha</title>
+    <title>Sudam Shrestha - Contact Me</title>
     <link href="./css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -18,14 +18,14 @@
                 <div class="flex justify-between items-center">
                     <!-- Logo and Name -->
                     <div class="flex items-center gap-2">
-                        <a class="flex gap-2 items-center justify-center" href="index.html">
+                        <a class="flex gap-2 items-center justify-center" href="/">
                             <img width="80" src="./images/logo.png" alt="Sudam Shrestha">
                             <h1 class="mainfont text-lg md:text-xl">Sudam Shrestha</h1>
                         </a>
                     </div>
 
                     <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
-                        <a class="poppins font-semibold underline text-blue-600" href="./index.html">Home</a>
+                        <a class="poppins font-semibold underline text-blue-600" href="/">Home</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100 hidden lg:block"
                             href="./skill.html">Skills</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100"
@@ -49,7 +49,7 @@
                         </button>
                     </div>
                     <div class="flex flex-col items-start gap-4 pl-5 mt-5">
-                        <a class="poppins font-semibold underline" href="./index.html">Home</a>
+                        <a class="poppins font-semibold underline" href="/">Home</a>
                         <a class="poppins font-semibold hidden" href="./skill.html">Skills</a>
                         <a class="poppins font-semibold" href="./project.html">Projects</a>
                         <a class="poppins font-semibold" href="./contact.html">Contacts</a>
