--- a/project.html
+++ b/project.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE>
+ lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudam Shrestha - Projects</title>
+    <meta name="keywords" content="Sudam Shrestha, web development projects, portfolio projects, Laravel projects, PHP projects, Vue.js projects, Nuxt.js projects, full stack developer, CODE IT, Dharan, Nepal">
+    <meta name="description" content="Explore the portfolio projects of Sudam Shrestha, a full-stack developer specializing in Laravel, PHP, Vue.js, and Tailwind CSS. Discover how I bring web applications to life with innovative solutions and efficient coding practices.">
+    <meta property="og:title" content="Sudam Shrestha - Projects">
+    <meta property="og:description" content="Browse through Sudam Shrestha's projects, showcasing web development work with Laravel, PHP, Vue.js, and Tailwind CSS. Discover innovative solutions and detailed examples of my work.">
+    <meta property="og:image" content="https://www.sudamshrestha.com.np/images/hero.webp">
+    <meta property="og:url" content="https://www.sudamshrestha.com.np/project">
+    <meta property="og:type" content="website">
     <link href="./css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -27,11 +34,11 @@
                     <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
                         <a class="poppins font-semibold underline text-blue-600" href="/">Home</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100 hidden lg:block"
-                            href="./skill.html">Skills</a>
+                            href="./skill">Skills</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100"
-                            href="./project.html">Projects</a>
+                            href="./project">Projects</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100"
-                            href="./contact.html">Contacts</a>
+                            href="./contact">Contacts</a>
                     </div>
 
                     <button id="menu-toggle" class="md:hidden text-2xl">
@@ -50,9 +57,9 @@
                     </div>
                     <div class="flex flex-col items-start gap-4 pl-5 mt-5">
                         <a class="poppins font-semibold underline" href="/">Home</a>
-                        <a class="poppins font-semibold hidden" href="./skill.html">Skills</a>
-                        <a class="poppins font-semibold" href="./project.html">Projects</a>
-                        <a class="poppins font-semibold" href="./contact.html">Contacts</a>
+                        <a class="poppins font-semibold hidden" href="./skill">Skills</a>
+                        <a class="poppins font-semibold" href="./project">Projects</a>
+                        <a class="poppins font-semibold" href="./contact">Contacts</a>
                     </div>
                 </div>
             </nav>
@@ -65,7 +72,7 @@
                 <div class="rounded-2xl md:hover:shadow-2xl col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
                     <div class="relative">
                         <img width="180" class="absolute left-[19%] -top-44 rounded-lg shadow-2xl"
-                            src="/images/hero.jpg" alt="Sudam Shrestha">
+                            src="/images/hero.webp" alt="Sudam Shrestha">
                         <h1 class="mt-[150px] text-center mainfont text-2xl">Sudam Shrestha</h1>
                         <p class="text-center font-sans font-extralight text-sm text-black">FullStack Developer</p>
                         <div class="flex gap-4 pt-4 pl-16">
@@ -280,4 +287,4 @@
     <script src="./js/script.js"></script>
 </body>
 
-</html>
+<>
