--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE>
+ lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudam Shrestha - FullStack Developer</title>
+    <meta name="description" content="I am Sudam Shrestha, a full-stack developer specializing in PHP, Laravel, Vue.js, and Tailwind CSS. Explore my portfolio to see my projects, skills, and experience in web development. Based in Dharan, Nepal, I am passionate about creating impactful and efficient web applications.">
+    <meta name="keywords" content="Sudam Shrestha, full stack developer, Laravel developer, PHP developer, web development, Tailwind CSS, Vue.js, Nuxt.js, Dharan, Nepal, CODE IT, portfolio, frontend development, backend development, web developer, software engineer">
+    <meta property="og:title" content="Sudam Shrestha - Full Stack Developer">
+    <meta property="og:description" content="Explore the portfolio of Sudam Shrestha, a skilled full-stack developer from Dharan, Nepal. Specializing in Laravel, PHP, Vue.js, and Tailwind CSS, showcasing projects and skills in web development.">
+    <meta property="og:image" content="https://www.sudamshrestha.com.np/images/hero.webp">
+    <meta property="og:url" content="https://www.sudamshrestha.com.np/">
+    <meta property="og:type" content="website">
+
     <link href="./css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -27,11 +35,11 @@
                     <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
                         <a class="poppins font-semibold underline text-blue-600" href="/">Home</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100 hidden lg:block"
-                            href="./skill.html">Skills</a>
+                            href="./skill">Skills</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100"
-                            href="./project.html">Projects</a>
+                            href="./project">Projects</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100"
-                            href="./contact.html">Contacts</a>
+                            href="./contact">Contacts</a>
                     </div>
 
                     <button id="menu-toggle" class="md:hidden text-2xl">
@@ -50,9 +58,9 @@
                     </div>
                     <div class="flex flex-col items-start gap-4 pl-5 mt-5">
                         <a class="poppins font-semibold underline" href="/">Home</a>
-                        <a class="poppins font-semibold hidden" href="./skill.html">Skills</a>
-                        <a class="poppins font-semibold" href="./project.html">Projects</a>
-                        <a class="poppins font-semibold" href="./contact.html">Contacts</a>
+                        <a class="poppins font-semibold hidden" href="./skill">Skills</a>
+                        <a class="poppins font-semibold" href="./project">Projects</a>
+                        <a class="poppins font-semibold" href="./contact">Contacts</a>
                     </div>
                 </div>
             </nav>
@@ -65,7 +73,7 @@
                 <div class="rounded-2xl md:hover:shadow-2xl col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
                     <div class="relative">
                         <img width="180" class="absolute left-[19%] -top-44 rounded-lg shadow-2xl"
-                            src="../images/hero.jpg" alt="Sudam Shrestha">
+                            src="../images/hero.webp" alt="Sudam Shrestha">
                         <h1 class="mt-[150px] text-center mainfont text-2xl">Sudam Shrestha</h1>
                         <p class="text-center font-sans font-extralight text-sm text-black">FullStack Developer</p>
                         <div class="flex gap-4 pt-4 pl-16">
@@ -169,7 +177,7 @@
 
                     <div class="col-span-12 md:col-span-12 lg:col-span-12 xl:col-span-6 py-5 md:py-5">
                         <a class="text-xl rounded-2xl px-12 md:px-18 lg:px-24 py-2 font-semibold bg-[#e5e5e6] border border-gray-600"
-                            href="./contact.html">
+                            href="./contact">
                             Hire Me</a>
                     </div>
                 </div>
@@ -183,4 +191,4 @@
     <script src="./js/script.js"></script>
 </body>
 
-</html>
+<>
