--- a/skill.html
+++ b/skill.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE>
+ lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudam Shrestha - Skills</title>
+    <meta name="keywords" content="Sudam Shrestha, developer skills, web development skills, PHP, Laravel, Vue.js, Nuxt.js, Tailwind CSS, frontend skills, backend skills, full stack developer, CODE IT, Dharan, Nepal">
+    <meta name="description" content="Learn about the technical skills and expertise of Sudam Shrestha, a full-stack developer. Proficient in PHP, Laravel, Vue.js, Nuxt.js, Tailwind CSS, and more, I am equipped to handle both frontend and backend development.">
+    <meta property="og:title" content="Sudam Shrestha - Skills">
+    <meta property="og:description" content="Learn about Sudam Shrestha's technical skills and expertise in web development. From PHP and Laravel to Vue.js and Tailwind CSS, explore the skills that define my approach to building web applications.">
+    <meta property="og:url" content="https://www.sudamshrestha.com.np/skill">
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/skill.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
@@ -28,11 +33,11 @@
                     <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
                         <a class="poppins font-semibold underline text-blue-600" href="/">Home</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100 hidden lg:block"
-                            href="./skill.html">Skills</a>
+                            href="./skill">Skills</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100"
-                            href="./project.html">Projects</a>
+                            href="./project">Projects</a>
                         <a class="poppins font-semibold hover:text-blue-700 duration-100"
-                            href="./contact.html">Contacts</a>
+                            href="./contact">Contacts</a>
                     </div>
 
                     <button id="menu-toggle" class="md:hidden text-2xl">
@@ -51,9 +56,9 @@
                     </div>
                     <div class="flex flex-col items-start gap-4 pl-5 mt-5">
                         <a class="poppins font-semibold underline" href="/">Home</a>
-                        <a class="poppins font-semibold hidden" href="./skill.html">Skills</a>
-                        <a class="poppins font-semibold" href="./project.html">Projects</a>
-                        <a class="poppins font-semibold" href="./contact.html">Contacts</a>
+                        <a class="poppins font-semibold hidden" href="./skill">Skills</a>
+                        <a class="poppins font-semibold" href="./project">Projects</a>
+                        <a class="poppins font-semibold" href="./contact">Contacts</a>
                     </div>
                 </div>
             </nav>
@@ -66,7 +71,7 @@
                 <div class="rounded-2xl md:hover:shadow-2xl col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
                     <div class="relative">
                         <img width="180" class="absolute left-[19%] -top-44 rounded-lg shadow-2xl"
-                            src="/images/hero.jpg" alt="Sudam Shrestha">
+                            src="/images/hero.webp" alt="Sudam Shrestha">
                         <h1 class="mt-[150px] text-center mainfont text-2xl">Sudam Shrestha</h1>
                         <p class="text-center font-sans font-extralight text-sm text-black">FullStack Developer</p>
                         <div class="flex gap-4 pt-4 pl-16">
@@ -150,7 +155,7 @@
                                 <li>
                                     <a href="#"><img src="/images/skills/others.png" alt="Others" width="60"></a>
                                     <ul>
-                                        <li><a href="#"><img src="/images/skills/html.png" alt="HTML" width="35"></a>
+                                        <li><a href="#"><img src="/images/skills.png" alt="HTML" width="35"></a>
                                         </li>
                                         <li><a href="#"><img src="/images/skills/css.png" alt="CSS" width="35"></a></li>
                                         <li><a href="#"><img src="/images/skills/restaapi.png" alt="Rest Api"
@@ -171,4 +176,4 @@
     <script src="./js/script.js"></script>
 </body>
 
-</html>
+<>
