--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudam Shrestha - FullStack Developer</title>
-    <meta name="description" content="I am Sudam Shrestha, a full-stack developer specializing in PHP, Laravel, Vue.js, and Tailwind CSS. Explore my portfolio to see my projects, skills, and experience in web development. Based in Dharan, Nepal, I am passionate about creating impactful and efficient web applications.">
-    <meta name="keywords" content="Sudam Shrestha, full stack developer, Laravel developer, PHP developer, web development, Tailwind CSS, Vue.js, Nuxt.js, Dharan, Nepal, CODE IT, portfolio, frontend development, backend development, web developer, software engineer">
+    <meta name="description"
+        content="I am Sudam Shrestha, a full-stack developer specializing in PHP, Laravel, Vue.js, and Tailwind CSS. Explore my portfolio to see my projects, skills, and experience in web development. Based in Dharan, Nepal, I am passionate about creating impactful and efficient web applications.">
+    <meta name="keywords"
+        content="Sudam Shrestha, full stack developer, Laravel developer, PHP developer, web development, Tailwind CSS, Vue.js, Nuxt.js, Dharan, Nepal, CODE IT, portfolio, frontend development, backend development, web developer, software engineer">
     <meta property="og:title" content="Sudam Shrestha - Full Stack Developer">
-    <meta property="og:description" content="Explore the portfolio of Sudam Shrestha, a skilled full-stack developer from Dharan, Nepal. Specializing in Laravel, PHP, Vue.js, and Tailwind CSS, showcasing projects and skills in web development.">
+    <meta property="og:description"
+        content="Explore the portfolio of Sudam Shrestha, a skilled full-stack developer from Dharan, Nepal. Specializing in Laravel, PHP, Vue.js, and Tailwind CSS, showcasing projects and skills in web development.">
     <meta property="og:image" content="https://www.sudamshrestha.com.np/images/hero.webp">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/">
     <meta property="og:type" content="website">
@@ -21,8 +24,8 @@
     <div class="container">
 
         <!-- navbar starts -->
-        <div class="z-50 w-full h-24 bg-[#f2f2f2] sticky top-0">
-            <nav class="py-5">
+        <div class="z-50 w-full bg-[#f2f2f2] sticky top-0">
+            <nav class="py-2">
                 <div class="flex justify-between items-center">
                     <!-- Logo and Name -->
                     <div class="flex items-center gap-2">
@@ -33,14 +36,12 @@
                     </div>
 
                     <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
-                        <a class="poppins font-semibold underline text-blue-600" href="/">Home</a>
-                        <a class="poppins font-semibold hover:text-blue-700 duration-100 hidden lg:block"
-                            href="./skill">Skills</a>
-                        <a class="poppins font-semibold hover:text-blue-700 duration-100"
-                            href="./project">Projects</a>
-                        <a class="poppins font-semibold hover:text-blue-700 duration-100"
-                            href="./contact">Contacts</a>
+                        <a class="poppins font-semibold underline-grow active" href="/">Home</a>
+                        <a class="poppins font-semibold underline-grow hidden lg:block" href="./skill">Skills</a>
+                        <a class="poppins font-semibold underline-grow" href="./project">Projects</a>
+                        <a class="poppins font-semibold underline-grow" href="./contact">Contacts</a>
                     </div>
+
 
                     <button id="menu-toggle" class="md:hidden text-2xl">
                         <span>&#9776;</span>
@@ -70,7 +71,7 @@
         <div>
             <div class="grid grid-cols-12 gap-4 py-10">
                 <!-- side pannel -->
-                <div class="rounded-2xl md:hover:shadow-2xl col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
+                <div class="rounded-2xl hero col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
                     <div class="relative">
                         <img width="180" class="absolute left-[19%] -top-44 rounded-lg shadow-2xl"
                             src="../images/hero.webp" alt="Sudam Shrestha">
@@ -170,13 +171,13 @@
                 <div class="grid grid-cols-12 py-10">
                     <div class="col-span-12 md:col-span-12 lg:col-span-12 xl:col-span-6 py-5 md:py-5">
                         <a target="_blank"
-                            class="text-xl rounded-2xl px-12 md:px-18 lg:px-24 py-2 font-semibold bg-[#ffa901]"
+                            class="text-xl btn rounded-2xl px-12 md:px-18 lg:px-24 py-2 font-semibold bg-[#ffa901]"
                             href="https://sudam.codeitapps.com/storage/m1bAotyNcxrlrXsaBodfJMO8239R6n-metabXkgY3YucGRm-.pdf">
                             Download CV</a>
                     </div>
 
                     <div class="col-span-12 md:col-span-12 lg:col-span-12 xl:col-span-6 py-5 md:py-5">
-                        <a class="text-xl rounded-2xl px-12 md:px-18 lg:px-24 py-2 font-semibold bg-[#e5e5e6] border border-gray-600"
+                        <a class="text-xl btn rounded-2xl px-12 md:px-18 lg:px-24 py-2 font-semibold bg-[#e5e5e6] border border-gray-600"
                             href="./contact">
                             Hire Me</a>
                     </div>
