--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
                         Hello!</h1>
                     <h1
                         class="sansista slight-slant sm:text-3xl md:text-4xl lg:text-5xl sm:font-bold md:font-bold font-extrabold">
-                        It’s me <span class="text-[#FFA901]">Sudam Shrestha</span></h1>
+                        It’s me <span class="text-[#FFA901] typing-effect" id="typed-name"></span>
+                    </h1>
+
                     <h1
                         class="pt-2 md:pt-4 lg:pt-6 sansista slight-slant sm:text-xl md:text-2xl lg:text-3xl sm:font-bold md:font-bold font-extrabold text-[#FFA901]">
                         <span class="text-black">— </span>Full Stack developer
