--- a/project.html
+++ b/project.html
@@ -31,13 +31,12 @@
                     </div>
 
                     <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
-                        <a class="poppins font-semibold underline text-blue-600" href="/">Home</a>
-                        <a class="poppins font-semibold hover:text-blue-700 duration-100 hidden lg:block"
-                            href="./skill">Skills</a>
-                        <a class="poppins font-semibold hover:text-blue-700 duration-100"
-                            href="./project">Projects</a>
-                        <a class="poppins font-semibold hover:text-blue-700 duration-100"
-                            href="./contact">Contacts</a>
+                        <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
+                            <a class="poppins font-semibold underline-grow" href="/">Home</a>
+                            <a class="poppins font-semibold underline-grow hidden lg:block" href="./skill">Skills</a>
+                            <a class="poppins font-semibold active underline-grow" href="./project">Projects</a>
+                            <a class="poppins font-semibold underline-grow" href="./contact">Contacts</a>
+                        </div>
                     </div>
 
                     <button id="menu-toggle" class="md:hidden text-2xl">
