--- a/skill.html
+++ b/skill.html
@@ -154,7 +154,7 @@
                                 <li>
                                     <a href="#"><img src="/images/skills/others.png" alt="Others" width="60"></a>
                                     <ul>
-                                        <li><a href="#"><img src="/images/skills.png" alt="HTML" width="35"></a>
+                                        <li><a href="#"><img src="/images/skills/html.png" alt="HTML" width="35"></a>
                                         </li>
                                         <li><a href="#"><img src="/images/skills/css.png" alt="CSS" width="35"></a></li>
                                         <li><a href="#"><img src="/images/skills/restaapi.png" alt="Rest Api"
