--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudam Shrestha - Contact Me</title>
-    <meta name="keywords" content="Sudam Shrestha, contact, get in touch, hire web developer, web developer Nepal, full stack developer contact, freelance web developer, CODE IT, Dharan, Nepal">
-    <meta name="description" content="Get in touch with Sudam Shrestha, a full-stack developer based in Dharan, Nepal. Whether you're looking to discuss a project, hire a web developer, or inquire about services, reach out through this contact page.">
+    <meta name="keywords"
+        content="Sudam Shrestha, contact, get in touch, hire web developer, web developer Nepal, full stack developer contact, freelance web developer, CODE IT, Dharan, Nepal">
+    <meta name="description"
+        content="Get in touch with Sudam Shrestha, a full-stack developer based in Dharan, Nepal. Whether you're looking to discuss a project, hire a web developer, or inquire about services, reach out through this contact page.">
     <meta property="og:title" content="Contact Sudam Shrestha - Full Stack Developer">
-    <meta property="og:description" content="Explore the portfolio of Sudam Shrestha, a skilled full-stack developer from Dharan, Nepal. Specializing in Laravel, PHP, Vue.js, and Tailwind CSS, showcasing projects and skills in web development.">
+    <meta property="og:description"
+        content="Explore the portfolio of Sudam Shrestha, a skilled full-stack developer from Dharan, Nepal. Specializing in Laravel, PHP, Vue.js, and Tailwind CSS, showcasing projects and skills in web development.">
     <meta property="og:image" content="https://www.sudamshrestha.com.np/images/hero.webp">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/contact">
@@ -26,9 +29,12 @@
                 <div class="flex justify-between items-center">
                     <!-- Logo and Name -->
                     <div class="flex items-center gap-2">
-                        <a class="flex gap-2 items-center justify-center" href="/">
+                        <a class="flex gap-2 items-center justify-center text-center" href="/">
                             <img width="80" src="./images/logo.png" alt="Sudam Shrestha">
-                            <h1 class="mainfont text-lg md:text-xl">Sudam Shrestha</h1>
+                            <div>
+                                <h1 class="mainfont text-lg md:text-xl lg:text-2xl font-bold">Sudam Shrestha</h1>
+                                <strong class="font-semibold">Full Stack Developer</strong>
+                            </div>
                         </a>
                     </div>
 
@@ -69,7 +75,7 @@
         <div>
             <div class="grid grid-cols-12 gap-4 py-10">
                 <!-- side pannel -->
-                <div class="rounded-2xl md:hover:shadow-2xl col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
+                <div class="rounded-2xl hero col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
                     <div class="relative">
                         <img width="180" class="absolute left-[19%] -top-44 rounded-lg shadow-2xl"
                             src="/images/hero.webp" alt="Sudam Shrestha">
