--- a/project.html
+++ b/project.html
@@ -24,9 +24,12 @@
                 <div class="flex justify-between items-center">
                     <!-- Logo and Name -->
                     <div class="flex items-center gap-2">
-                        <a class="flex gap-2 items-center justify-center" href="/">
+                        <a class="flex gap-2 items-center justify-center text-center" href="/">
                             <img width="80" src="./images/logo.png" alt="Sudam Shrestha">
-                            <h1 class="mainfont text-lg md:text-xl">Sudam Shrestha</h1>
+                            <div>
+                                <h1 class="mainfont text-lg md:text-xl lg:text-2xl font-bold">Sudam Shrestha</h1>
+                                <strong class="font-semibold">Full Stack Developer</strong>
+                            </div>
                         </a>
                     </div>
 
@@ -67,7 +70,7 @@
         <div>
             <div class="grid grid-cols-12 gap-4 py-10">
                 <!-- side pannel -->
-                <div class="rounded-2xl md:hover:shadow-2xl col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
+                <div class="rounded-2xl hero col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
                     <div class="relative">
                         <img width="180" class="absolute left-[19%] -top-44 rounded-lg shadow-2xl"
                             src="/images/hero.webp" alt="Sudam Shrestha">
@@ -276,8 +279,6 @@
                         </div>
                     </div>
                 </div>
-
-
 
             </div>
         </div>
