--- a/skill.html
+++ b/skill.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudam Shrestha - Skills</title>
-    <meta name="keywords" content="Sudam Shrestha, developer skills, web development skills, PHP, Laravel, Vue.js, Nuxt.js, Tailwind CSS, frontend skills, backend skills, full stack developer, CODE IT, Dharan, Nepal">
-    <meta name="description" content="Learn about the technical skills and expertise of Sudam Shrestha, a full-stack developer. Proficient in PHP, Laravel, Vue.js, Nuxt.js, Tailwind CSS, and more, I am equipped to handle both frontend and backend development.">
+    <meta name="keywords"
+        content="Sudam Shrestha, developer skills, web development skills, PHP, Laravel, Vue.js, Nuxt.js, Tailwind CSS, frontend skills, backend skills, full stack developer, CODE IT, Dharan, Nepal">
+    <meta name="description"
+        content="Learn about the technical skills and expertise of Sudam Shrestha, a full-stack developer. Proficient in PHP, Laravel, Vue.js, Nuxt.js, Tailwind CSS, and more, I am equipped to handle both frontend and backend development.">
     <meta property="og:title" content="Sudam Shrestha - Skills">
-    <meta property="og:description" content="Learn about Sudam Shrestha's technical skills and expertise in web development. From PHP and Laravel to Vue.js and Tailwind CSS, explore the skills that define my approach to building web applications.">
+    <meta property="og:description"
+        content="Learn about Sudam Shrestha's technical skills and expertise in web development. From PHP and Laravel to Vue.js and Tailwind CSS, explore the skills that define my approach to building web applications.">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/skill">
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/skill.css" rel="stylesheet">
@@ -24,16 +27,20 @@
                 <div class="flex justify-between items-center">
                     <!-- Logo and Name -->
                     <div class="flex items-center gap-2">
-                        <a class="flex gap-2 items-center justify-center" href="/">
+                        <a class="flex gap-2 items-center justify-center text-center" href="/">
                             <img width="80" src="./images/logo.png" alt="Sudam Shrestha">
-                            <h1 class="mainfont text-lg md:text-xl">Sudam Shrestha</h1>
+                            <div>
+                                <h1 class="mainfont text-lg md:text-xl lg:text-2xl font-bold">Sudam Shrestha</h1>
+                                <strong class="font-semibold">Full Stack Developer</strong>
+                            </div>
                         </a>
                     </div>
 
                     <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
                         <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
                             <a class="poppins font-semibold underline-grow" href="/">Home</a>
-                            <a class="poppins font-semibold active underline-grow hidden lg:block" href="./skill">Skills</a>
+                            <a class="poppins font-semibold active underline-grow hidden lg:block"
+                                href="./skill">Skills</a>
                             <a class="poppins font-semibold underline-grow" href="./project">Projects</a>
                             <a class="poppins font-semibold underline-grow" href="./contact">Contacts</a>
                         </div>
@@ -67,7 +74,7 @@
         <div>
             <div class="grid grid-cols-12 gap-4 py-10">
                 <!-- side pannel -->
-                <div class="rounded-2xl md:hover:shadow-2xl col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
+                <div class="rounded-2xl hero col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
                     <div class="relative">
                         <img width="180" class="absolute left-[19%] -top-44 rounded-lg shadow-2xl"
                             src="/images/hero.webp" alt="Sudam Shrestha">
