--- a/index.html
+++ b/index.html
@@ -4,192 +4,170 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sudam Shrestha - FullStack Developer</title>
-    <meta name="description"
-        content="I am Sudam Shrestha, a full-stack developer specializing in PHP, Laravel, Vue.js, and Tailwind CSS. Explore my portfolio to see my projects, skills, and experience in web development. Based in Dharan, Nepal, I am passionate about creating impactful and efficient web applications.">
-    <meta name="keywords"
-        content="Sudam Shrestha, full stack developer, Laravel developer, PHP developer, web development, Tailwind CSS, Vue.js, Nuxt.js, Dharan, Nepal, CODE IT, portfolio, frontend development, backend development, web developer, software engineer">
+    <title>Sudam Shrestha - Full Stack Developer</title>
+    <meta name="description" content="I am Sudam Shrestha, a full-stack developer specializing in PHP, Laravel, Vue.js, and Tailwind CSS. Explore my portfolio to see my projects, skills, and experience in web development. Based in Dharan, Nepal, I am passionate about creating impactful and efficient web applications.">
+    <meta name="keywords" content="Sudam Shrestha, full stack developer, Laravel developer, PHP developer, web development, Tailwind CSS, Vue.js, Nuxt.js, Dharan, Nepal, CODE IT, portfolio, frontend development, backend development, web developer, software engineer">
     <meta property="og:title" content="Sudam Shrestha - Full Stack Developer">
-    <meta property="og:description"
-        content="Explore the portfolio of Sudam Shrestha, a skilled full-stack developer from Dharan, Nepal. Specializing in Laravel, PHP, Vue.js, and Tailwind CSS, showcasing projects and skills in web development.">
+    <meta property="og:description" content="Explore the portfolio of Sudam Shrestha, a skilled full-stack developer from Dharan, Nepal. Specializing in Laravel, PHP, Vue.js, and Tailwind CSS, showcasing projects and skills in web development.">
     <meta property="og:image" content="https://www.sudamshrestha.com.np/images/hero.webp">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/">
     <meta property="og:type" content="website">
-
-    <link href="./css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body class="relative main">
     <div class="container">
 
-        <!-- navbar starts -->
-        <div class="z-50 w-full bg-[#f2f2f2] sticky top-0">
+        <!-- Navbar starts -->
+        <header class="z-50 w-full bg-[#f2f2f2] sticky top-0">
             <nav class="py-2">
                 <div class="flex justify-between items-center">
                     <!-- Logo and Name -->
                     <div class="flex items-center gap-2">
-                        <a class="flex gap-2 items-center justify-center" href="/">
-                            <img width="80" src="./images/logo.png" alt="Sudam Shrestha">
-                            <h1 class="mainfont text-lg md:text-xl">Sudam Shrestha</h1>
+                        <a class="flex gap-2 items-center justify-center text-center" href="/" aria-label="Home">
+                            <img width="80" src="./images/logo.png" alt="Sudam Shrestha Logo">
+                            <div>
+                                <h1 class="mainfont text-lg md:text-xl lg:text-2xl font-bold">Sudam Shrestha</h1>
+                                <strong class="font-semibold">Full Stack Developer</strong>
+                            </div>
                         </a>
                     </div>
 
                     <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
-                        <a class="poppins font-semibold underline-grow active" href="/">Home</a>
-                        <a class="poppins font-semibold underline-grow hidden lg:block" href="./skill">Skills</a>
-                        <a class="poppins font-semibold underline-grow" href="./project">Projects</a>
-                        <a class="poppins font-semibold underline-grow" href="./contact">Contacts</a>
+                        <a class="poppins font-semibold underline-grow active" href="/" aria-label="Home">Home</a>
+                        <a class="poppins font-semibold underline-grow hidden lg:block" href="./skill" aria-label="Skills">Skills</a>
+                        <a class="poppins font-semibold underline-grow" href="./project" aria-label="Projects">Projects</a>
+                        <a class="poppins font-semibold underline-grow" href="./contact" aria-label="Contact">Contacts</a>
                     </div>
 
-
-                    <button id="menu-toggle" class="md:hidden text-2xl">
+                    <button id="menu-toggle" class="md:hidden text-2xl" aria-label="Open Menu">
                         <span>&#9776;</span>
                     </button>
                 </div>
 
                 <!-- Drawer Menu for Mobile -->
-                <div id="drawer-menu"
-                    class="fixed top-0 left-0 h-full w-[250px] bg-[#F9FAFB] shadow-2xl transform -translate-x-full transition-transform duration-300 ease-in-out z-[9999]">
+                <div id="drawer-menu" class="fixed top-0 left-0 h-full w-[250px] bg-[#F9FAFB] shadow-2xl transform -translate-x-full transition-transform duration-300 ease-in-out z-[9999]">
                     <div class="flex justify-between items-center p-5">
                         <h2 class="text-xl font-bold">Menu</h2>
-                        <button id="close-menu" class="text-2xl">
-                            &times;
-                        </button>
+                        <button id="close-menu" class="text-2xl" aria-label="Close Menu">&times;</button>
                     </div>
                     <div class="flex flex-col items-start gap-4 pl-5 mt-5">
-                        <a class="poppins font-semibold underline" href="/">Home</a>
-                        <a class="poppins font-semibold hidden" href="./skill">Skills</a>
-                        <a class="poppins font-semibold" href="./project">Projects</a>
-                        <a class="poppins font-semibold" href="./contact">Contacts</a>
+                        <a class="poppins font-semibold underline" href="/" aria-label="Home">Home</a>
+                        <a class="poppins font-semibold hidden" href="./skill" aria-label="Skills">Skills</a>
+                        <a class="poppins font-semibold" href="./project" aria-label="Projects">Projects</a>
+                        <a class="poppins font-semibold" href="./contact" aria-label="Contact">Contacts</a>
                     </div>
                 </div>
             </nav>
-        </div>
-        <!-- navbar ends -->
+        </header>
+        <!-- Navbar ends -->
 
-        <div>
+        <main>
             <div class="grid grid-cols-12 gap-4 py-10">
-                <!-- side pannel -->
-                <div class="rounded-2xl hero col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
+                <!-- Side Panel -->
+                <aside class="rounded-2xl hero col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
                     <div class="relative">
-                        <img width="180" class="absolute left-[19%] -top-44 rounded-lg shadow-2xl"
-                            src="../images/hero.webp" alt="Sudam Shrestha">
+                        <img width="180" class="absolute left-[19%] -top-44 rounded-lg shadow-2xl" src="../images/hero.webp" alt="Sudam Shrestha Profile Picture">
                         <h1 class="mt-[150px] text-center mainfont text-2xl">Sudam Shrestha</h1>
-                        <p class="text-center font-sans font-extralight text-sm text-black">FullStack Developer</p>
+                        <p class="text-center font-sans font-extralight text-sm text-black">Full Stack Developer</p>
                         <div class="flex gap-4 pt-4 pl-16">
-                            <a target="_blank" href="https://www.facebook.com/sudam.shrestha.98/">
-                                <img src="../images/facebook.svg" width="25" alt="Facebook">
+                            <a target="_blank" href="https://www.facebook.com/sudam.shrestha.98/" aria-label="Facebook">
+                                <img src="../images/facebook.svg" width="25" alt="Facebook Icon">
                             </a>
-                            <a target="_blank" href="https://wa.me/9704508525">
-                                <img src="../images/whatsapp.svg" width="25" alt="Whatsapp">
+                            <a target="_blank" href="https://wa.me/9704508525" aria-label="WhatsApp">
+                                <img src="../images/whatsapp.svg" width="25" alt="WhatsApp Icon">
                             </a>
-                            <a target="_blank" href="https://github.com/Sudam939">
-                                <img src="../images/github.svg" width="25" alt="Github">
+                            <a target="_blank" href="https://github.com/Sudam939" aria-label="GitHub">
+                                <img src="../images/github.svg" width="25" alt="GitHub Icon">
                             </a>
-                            <a target="_blank" href="https://www.linkedin.com/in/sudam-shrestha-59a15126a">
-                                <img src="../images/linkedin.svg" width="25" alt="Linkedin">
+                            <a target="_blank" href="https://www.linkedin.com/in/sudam-shrestha-59a15126a" aria-label="LinkedIn">
+                                <img src="../images/linkedin.svg" width="25" alt="LinkedIn Icon">
                             </a>
                         </div>
 
                         <div class="pt-5 pl-8">
                             <div class="flex items-center gap-2 py-2">
-                                <a href="tel:9704508525" class="flex items-center gap-2">
-                                    <img width="18" class="text-white" src="../images/phone.svg" alt="Phone">
+                                <a href="tel:9704508525" class="flex items-center gap-2" aria-label="Phone">
+                                    <img width="18" src="../images/phone.svg" alt="Phone Icon">
                                     <div>
                                         <p class="text-xs text-gray-400">Phone</p>
-                                        <p class="font-semibold text-md">9704508525 </p>
+                                        <p class="font-semibold text-md">9704508525</p>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="flex items-center gap-2">
-                                <a href="mailto:sudamshrestha939@gmail" class="flex items-center gap-2">
-                                    <img width="18" class="text-white" src="../images/envelope.svg" alt="Phone">
+                                <a href="mailto:sudamshrestha939@gmail.com" class="flex items-center gap-2" aria-label="Email">
+                                    <img width="18" src="../images/envelope.svg" alt="Email Icon">
                                     <div>
                                         <p class="text-xs text-gray-400">Email</p>
-                                        <p class="font-semibold w-1/2 text-md">sudamshrestha939@gmail</p>
+                                        <p class="font-semibold w-1/2 text-md">sudamshrestha939@gmail.com</p>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="flex items-center gap-2 py-2">
                                 <div class="flex items-center gap-2">
-                                    <img width="18" class="text-white" src="../images/location.svg" alt="Phone">
+                                    <img width="18" src="../images/location.svg" alt="Location Icon">
                                     <div>
                                         <p class="text-xs text-gray-400">Location</p>
-                                        <p class="font-semibold text-md">Dharan, Nepal </p>
+                                        <p class="font-semibold text-md">Dharan, Nepal</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-
-
-            </div>
-            <div class="lg:pl-[400px] -mt-[70px] sm:pt-10 md:pt-14 lg:pt-0">
-                <div class="w-[70%] m-auto md:w-[100%]">
-                    <h1
-                        class="sansista slight-slant pt-6 md:pt-0 lg:pt-0 sm:text-3xl md:text-4xl lg:text-5xl sm:font-bold md:font-bold font-extrabold">
-                        Hello!</h1>
-                    <h1
-                        class="sansista slight-slant sm:text-3xl md:text-4xl lg:text-5xl sm:font-bold md:font-bold font-extrabold">
-                        It’s me <span class="text-[#FFA901] typing-effect" id="typed-name"></span>
-                    </h1>
-
-                    <h1
-                        class="pt-2 md:pt-4 lg:pt-6 sansista slight-slant sm:text-xl md:text-2xl lg:text-3xl sm:font-bold md:font-bold font-extrabold text-[#FFA901]">
-                        <span class="text-black">— </span>Full Stack developer
-                    </h1>
-                </div>
-
-
-                <p class="font-sans text-gray-950 text-lg pt-2 md:pt-4 lg:pt-6">
-                    My passion lies in crafting seamless digital experiences using the Laravel framework. With a
-                    deep-rooted expertise in Laravel and a keen eye for detail, I thrive on building robust, efficient,
-                    and user-friendly web applications. My journey in the realm of development is driven by the desire
-                    to innovate and elevate user experiences. Let's create something amazing together!
-                </p>
-
-
-                <div class="grid grid-cols-12 pt-7">
-                    <div class="col-span-12 md:col-span-4">
-                        <h3 class="text-lg md:text-xl lg:text-2xl text-gray-400">Experience:</h3>
-                        <h1 class="text-lg md:text-xl lg:text-2xl font-sans font-semibold">5+ Years</h1>
-                    </div>
-
-                    <div class="col-span-12 md:col-span-4">
-                        <h3 class="text-lg md:text-xl lg:text-2xl text-gray-400">Age:</h3>
-                        <h1 class="text-lg md:text-xl lg:text-2xl font-sans font-semibold">24 Years</h1>
-                    </div>
-
-                    <div class="col-span-12 md:col-span-4">
-                        <h3 class="text-lg md:text-xl lg:text-2xl text-gray-400">Projects:</h3>
-                        <h1 class="text-lg md:text-xl lg:text-2xl font-sans font-semibold">11+</h1>
-                    </div>
-                </div>
-
-                <div class="grid grid-cols-12 py-10">
-                    <div class="col-span-12 md:col-span-12 lg:col-span-12 xl:col-span-6 py-5 md:py-5">
-                        <a target="_blank"
-                            class="text-xl btn rounded-2xl px-12 md:px-18 lg:px-24 py-2 font-semibold bg-[#ffa901]"
-                            href="https://sudam.codeitapps.com/storage/m1bAotyNcxrlrXsaBodfJMO8239R6n-metabXkgY3YucGRm-.pdf">
-                            Download CV</a>
-                    </div>
-
-                    <div class="col-span-12 md:col-span-12 lg:col-span-12 xl:col-span-6 py-5 md:py-5">
-                        <a class="text-xl btn rounded-2xl px-12 md:px-18 lg:px-24 py-2 font-semibold bg-[#e5e5e6] border border-gray-600"
-                            href="./contact">
-                            Hire Me</a>
-                    </div>
-                </div>
+                </aside>
             </div>
 
-        </div>
+            <section>
+                <div class="lg:pl-[400px] -mt-[70px] sm:pt-10 md:pt-14 lg:pt-0">
+                    <div class="w-[70%] m-auto md:w-[100%]">
+                        <p class="sansista slight-slant pt-6 md:pt-0 lg:pt-0 sm:text-3xl md:text-4xl lg:text-5xl sm:font-bold md:font-bold font-extrabold">Hello!</p>
+                        <h1 class="sansista slight-slant sm:text-3xl md:text-4xl lg:text-5xl sm:font-bold md:font-bold font-extrabold">
+                            It’s me <span class="text-[#FFA901] typing-effect" id="typed-name"></span>
+                        </h1>
 
+                        <h2 class="pt-2 md:pt-4 lg:pt-6 sansista slight-slant sm:text-xl md:text-2xl lg:text-3xl sm:font-bold md:font-bold font-extrabold text-[#FFA901]">
+                            <span class="text-black">— </span>Full Stack Developer
+                        </h2>
+                    </div>
+
+                    <p class="font-sans text-gray-950 text-lg pt-2 md:pt-4 lg:pt-6">
+                        My passion lies in crafting seamless digital experiences using the Laravel framework. With a deep-rooted expertise in Laravel and a keen eye for detail, I thrive on building robust, efficient, and user-friendly web applications. My journey in the realm of development is driven by the desire to innovate and elevate user experiences. Let's create something amazing together!
+                    </p>
+
+                    <div class="grid grid-cols-12 pt-7">
+                        <div class="col-span-12 md:col-span-4">
+                            <h4 class="text-lg md:text-xl lg:text-2xl text-gray-400">Experience:</h4>
+                            <p class="text-lg md:text-xl lg:text-2xl font-sans font-semibold">5+ Years</p>
+                        </div>
+
+                        <div class="col-span-12 md:col-span-4">
+                            <h4 class="text-lg md:text-xl lg:text-2xl text-gray-400">Age:</h4>
+                            <p class="text-lg md:text-xl lg:text-2xl font-sans font-semibold">24 Years</p>
+                        </div>
+
+                        <div class="col-span-12 md:col-span-4">
+                            <h4 class="text-lg md:text-xl lg:text-2xl text-gray-400">Projects:</h4>
+                            <p class="text-lg md:text-xl lg:text-2xl font-sans font-semibold">11+</p>
+                        </div>
+                    </div>
+
+                    <div class="grid grid-cols-12 py-10">
+                        <div class="col-span-12 md:col-span-12 lg:col-span-12 xl:col-span-6 py-5 md:py-5">
+                            <a target="_blank" class="text-xl btn rounded-2xl px-12 md:px-18 lg:px-24 py-2 font-semibold bg-[#ffa901]" href="https://sudamshrestha.com.np/images/sudamcv.pdf" aria-label="Download CV">Download CV</a>
+                        </div>
+
+                        <div class="col-span-12 md:col-span-12 lg:col-span-12 xl:col-span-6 py-5 md:py-5">
+                            <a class="text-xl btn rounded-2xl px-12 md:px-18 lg:px-24 py-2 font-semibold bg-[#e5e5e6] border border-gray-600" href="./contact" aria-label="Hire Me">Hire Me</a>
+                        </div>
+                    </div>
+                </section>
+            </section>
+        </main>
     </div>
-
 
     <script src="./js/script.js"></script>
 </body>
