--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,13 @@
     <div class="container">
 
         <!-- navbar starts -->
-        <div class="z-50 w-full h-24 bg-[#f2f2f2] sticky top-0">
-            <nav class="py-5">
+        <header class="z-50 w-full bg-[#f2f2f2] sticky top-0">
+            <nav class="py-2">
                 <div class="flex justify-between items-center">
                     <!-- Logo and Name -->
                     <div class="flex items-center gap-2">
-                        <a class="flex gap-2 items-center justify-center text-center" href="/">
-                            <img width="80" src="./images/logo.png" alt="Sudam Shrestha">
+                        <a class="flex gap-2 items-center justify-center text-center" href="/" aria-label="Home">
+                            <img width="80" src="./images/logo.png" alt="Sudam Shrestha Logo">
                             <div>
                                 <h1 class="mainfont text-lg md:text-xl lg:text-2xl font-bold">Sudam Shrestha</h1>
                                 <strong class="font-semibold">Full Stack Developer</strong>
@@ -39,15 +39,16 @@
                     </div>
 
                     <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
-                        <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
-                            <a class="poppins font-semibold underline-grow" href="/">Home</a>
-                            <a class="poppins font-semibold underline-grow hidden lg:block" href="./skill">Skills</a>
-                            <a class="poppins font-semibold underline-grow" href="./project">Projects</a>
-                            <a class="poppins font-semibold active underline-grow" href="./contact">Contacts</a>
-                        </div>
+                        <a class="poppins font-semibold underline-grow" href="/" aria-label="Home">Home</a>
+                        <a class="poppins font-semibold underline-grow hidden lg:block" href="./skill"
+                            aria-label="Skills">Skills</a>
+                        <a class="poppins font-semibold underline-grow" href="./project"
+                            aria-label="Projects">Projects</a>
+                        <a class="poppins active font-semibold underline-grow" href="./contact"
+                            aria-label="Contact">Contacts</a>
                     </div>
 
-                    <button id="menu-toggle" class="md:hidden text-2xl">
+                    <button id="menu-toggle" class="md:hidden text-2xl" aria-label="Open Menu">
                         <span>&#9776;</span>
                     </button>
                 </div>
@@ -57,19 +58,17 @@
                     class="fixed top-0 left-0 h-full w-[250px] bg-[#F9FAFB] shadow-2xl transform -translate-x-full transition-transform duration-300 ease-in-out z-[9999]">
                     <div class="flex justify-between items-center p-5">
                         <h2 class="text-xl font-bold">Menu</h2>
-                        <button id="close-menu" class="text-2xl">
-                            &times;
-                        </button>
+                        <button id="close-menu" class="text-2xl" aria-label="Close Menu">&times;</button>
                     </div>
                     <div class="flex flex-col items-start gap-4 pl-5 mt-5">
-                        <a class="poppins font-semibold underline" href="/">Home</a>
-                        <a class="poppins font-semibold hidden" href="./skill">Skills</a>
-                        <a class="poppins font-semibold" href="./project">Projects</a>
-                        <a class="poppins font-semibold" href="./contact">Contacts</a>
+                        <a class="poppins font-semibold underline" href="/" aria-label="Home">Home</a>
+                        <a class="poppins font-semibold hidden" href="./skill" aria-label="Skills">Skills</a>
+                        <a class="poppins font-semibold" href="./project" aria-label="Projects">Projects</a>
+                        <a class="poppins font-semibold" href="./contact" aria-label="Contact">Contacts</a>
                     </div>
                 </div>
             </nav>
-        </div>
+        </header>
         <!-- navbar ends -->
 
         <div>
